--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
         run: |
           zsh -n src/.zshrc
 
+      - name: Lint .zshrc Formatting
+        run: |
+          shfmt -d src/.zshrc
+
       - name: Check Required Files
         run: |
           test -f src/github-dark.terminal
