chore: add recommended extensions for shfmt, editorconfig, and markdownlint

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "foxundermoon.shell-format",
-    "EditorConfig.EditorConfig"
+    "editorconfig.editorconfig",
+    "davidanson.vscode-markdownlint"
   ]
 }
