--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,38 @@
-name: Repo Health Check
+name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
   workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   validate:
+    name: Project Validation
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Check basic repo structure
+      - name: Install zsh and shfmt
         run: |
-          test -f src/.zshrc
+          sudo apt update
+          sudo apt install -y zsh shfmt
+
+      - name: Syntax Check .zshrc
+        run: |
+          zsh -n src/.zshrc
+
+      - name: Lint .zshrc Formatting
+        run: |
+          shfmt -d src/.zshrc
+
+      - name: Check Required Files
+        run: |
           test -f src/github-dark.terminal
           test -f README.md
           test -f LICENSE
